<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b2db91"
    tools:context=".Newactivity">

    <ImageView
        android:id="@+id/aveng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/vengers"
        android:contentDescription="@string/app_name" />

    <EditText
        android:id="@+id/mob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/aveng"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_mobile_number"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mob"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:hint="@string/enter_password"
        android:maxLines="1"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass"
        android:text="@string/login"
        android:textSize="25sp"
        android:padding="10dp" />

    <TextView
        android:id="@+id/textforget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/forgot_password" />

    <TextView
        android:id="@+id/newregistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/new_registration"
        android:textSize="15sp" />

</RelativeLayout>
